--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/KatsFahad/quotes-api#readme",
   "dependencies": {
-    "morgan": "^1.10.0"
+    "@prisma/client": "^5.18.0",
+    "morgan": "^1.10.0",
+    "quotes-api": "file:"
   },
   "devDependencies": {
     "prisma": "^5.18.0"
