--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/KatsFahad/quotes-api#readme",
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "body-parser": "^1.20.2",
     "morgan": "^1.10.0",
     "quotes-api": "file:"
   },
