--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "body-parser": "^1.20.2",
+    "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "quotes-api": "file:"
   },
