--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "quotes-api": "file:"
   },
